--- a/style.css
+++ b/style.css
@@ -1,2 +1,6 @@
 body{background-color: #383d58;
 color: white;}
+.cabecalho-imagem{whidht:20}
+.cabecalho{background-color: #383D58;
+color: white;
+display: flex;}
